--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,11 @@
 	    <version>4.5.3</version>
 	</dependency>
 	<dependency>
+    	<groupId>commons-validator</groupId>
+    	<artifactId>commons-validator</artifactId>
+    	<version>1.4.0</version>
+	</dependency>
+	<dependency>
 	    <groupId>com.google.code.gson</groupId>
 	    <artifactId>gson</artifactId>
 	    <version>2.8.0</version>
