added web project, updated db schema

--- a/server.properties
+++ b/server.properties
@@ -1,7 +1,7 @@
 server.port=8080
 server.parallelThreads=10
 server.db.url=//localhost:3306/crawler
-server.db.username=crawler
+server.db.username=manos
 server.db.password=1234567890
 
 
